<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/im"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_back2">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="216dp"
            android:layout_height="197dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton_exit"
            android:layout_width="64dp"
            android:layout_height="74dp"
            android:layout_marginEnd="5dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:scaleType="centerInside"
            android:src="@drawable/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgProfile" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppins_light"
            android:text="UserName"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProfile" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="365dp"
            android:layout_height="288dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_prof">

            <LinearLayout
                android:layout_width="405dp"
                android:layout_height="66dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/age"
                    android:textColor="@color/profile"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editAge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/vvedite_age"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="115dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/gender"
                    android:textColor="@color/profile"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton_man"
                        android:layout_width="133dp"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/text_but"
                        android:fontFamily="@font/poppins"
                        android:text="@string/man" />

                    <RadioButton
                        android:id="@+id/radioButton_woman"
                        android:layout_width="135dp"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/text_but"
                        android:text="@string/woman" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="409dp"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/currentWeight"
                    android:textColor="@color/profile"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editCurrentWeight"
                    android:layout_width="246dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/weight"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins"
                    android:text="@string/wantWeight"
                    android:textColor="@color/profile"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editWantWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="57dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/weight"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            android:text="Заполните профиль"
            android:textColor="@color/profile"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <ImageButton
            android:id="@+id/imageButton_save"
            android:layout_width="66dp"
            android:layout_height="70dp"
            android:contentDescription="@string/save"
            android:src="@drawable/save_profile"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/textView_prof"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView_prof" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>