<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="79dp"
        android:elevation="12dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/fitness"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70dp"
        app:layout_constraintBottom_toTopOf="@+id/Buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:fontFamily="@font/cinzel"
        android:text="@string/planer"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/white"
            android:elevation="20dp"
            android:shadowColor="@color/black"
            android:shadowDx="20"
            android:text="@string/enter"
            android:textColor="@color/text_but"
            android:textSize="14sp"
            app:cornerRadius="25dp" />

        <Button
            android:id="@+id/registration_btn"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="20dp"
            android:text="@string/registration"
            android:textColor="@color/text_but"
            android:textSize="14sp"
            app:cornerRadius="25dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>